<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_2"
    tools:ignore="UselessParent,SpUsage,RtlHardcoded">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_phone_buttons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_phone_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/phone_explanation"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="phone"
                android:backgroundTint="@color/black"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_1"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_phone_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:id="@+id/v_phone_delete"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tv_phone_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_tap_here"
            android:gravity="center"
            android:minHeight="56dp"
            android:text="@string/phone_delete"
            android:textColor="@drawable/text_tap_here"
            android:textSize="@dimen/text_big" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_phone_skip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_tap_here"
                android:gravity="center"
                android:minHeight="56dp"
                android:text="@string/phone_skip"
                android:textColor="@drawable/text_tap_here"
                android:textSize="@dimen/text_big" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tv_phone_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_tap_here"
                android:gravity="center"
                android:minHeight="56dp"
                android:text="@string/phone_submit"
                android:textColor="@drawable/text_tap_here"
                android:textSize="@dimen/text_big" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>