<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:ignore="UselessParent,SpUsage,RtlHardcoded">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:background="@color/red_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_initial_overlay_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:text="@string/alarm_active"
                android:textColor="@color/white"
                android:textSize="@dimen/text_huge" />

            <TextView
                android:id="@+id/tv_initial_overlay_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_big"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:text="@string/explanation"
                android:textColor="@color/white"
                android:textSize="@dimen/text_big" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="100">

                <RelativeLayout
                    android:id="@+id/rl_initial_overlay_call_police"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/default_button_size"
                    android:layout_weight="50"
                    android:background="@drawable/button_call_police">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:duplicateParentState="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/ic_call_police_size"
                            android:layout_height="@dimen/ic_call_police_size"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="@dimen/default_space"
                            android:contentDescription="@string/none"
                            android:duplicateParentState="true"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_call_police" />

                        <TextView
                            android:id="@+id/tv_initial_overlay_call_police"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:duplicateParentState="true"
                            android:includeFontPadding="false"
                            android:text="@string/call_police"
                            android:textColor="@drawable/text_button_call_police"
                            android:textSize="@dimen/text_big" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/ic_call_police_line_height"
                        android:layout_alignParentBottom="true"
                        android:contentDescription="@string/none"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_call_police_line" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_initial_overlay_chat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:background="@drawable/bg_tap_here_cpo_light">

        <TextView
            android:id="@+id/tv_initial_overlay_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/tap_here_to_chat"
            android:textColor="@drawable/text_tap_here_light"
            android:textSize="@dimen/text_regular" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_initial_overlay_hide"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:background="@drawable/bg_tap_here">

        <TextView
            android:id="@+id/tv_initial_overlay_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:includeFontPadding="false"
            android:text="@string/tap_to_hide"
            android:textColor="@drawable/text_tap_here"
            android:textSize="@dimen/text_big" />
    </RelativeLayout>
</LinearLayout>